--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ML Zoomcamp Module 1 Homework - Tristan Kilper"
+    "# ML Zoomcamp Module 1 Homework - Tristan Kilper"
    ]
   },
   {
