hw2 finished + start hw3

--- a/02-regression/homework.ipynb
+++ b/02-regression/homework.ipynb
@@ -344,40 +344,16 @@
    "source": [
     "df_train = df.iloc[idx[:n_train]]\n",
     "df_val = df.iloc[idx[n_train:n_train+n_val]]\n",
-    "df_test = df.iloc[idx[n_train+n_val:]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "5866bb98-bd6f-4048-81fc-4772c24e8539",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_test = df.iloc[idx[n_train+n_val:]]\n",
+    "\n",
     "y_train = np.array(df_train.fuel_efficiency_mpg.values)\n",
     "y_val = np.array(df_val.fuel_efficiency_mpg.values)\n",
-    "y_test = np.array(df_test.fuel_efficiency_mpg.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "b06a8e95-df4d-4483-9552-eb6f0eb5e898",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_test = np.array(df_test.fuel_efficiency_mpg.values)\n",
+    "\n",
     "del df_train['fuel_efficiency_mpg']\n",
     "del df_val['fuel_efficiency_mpg']\n",
-    "del df_test['fuel_efficiency_mpg']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "962482f8-429d-48a4-8f7d-c4363d291d7e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "del df_test['fuel_efficiency_mpg']\n",
+    "\n",
     "df_train = df_train.reset_index(drop=True)\n",
     "df_val = df_val.reset_index(drop=True)\n",
     "df_test = df_test.reset_index(drop=True)"
@@ -694,20 +670,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "ac90a348-baec-4386-81ae-fca0a8727793",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[np.float64(0.5206531296294218),\n",
+       " np.float64(0.521338891285577),\n",
+       " np.float64(0.5228069974803171),\n",
+       " np.float64(0.515951674119676),\n",
+       " np.float64(0.5109129460053851),\n",
+       " np.float64(0.52834064601107),\n",
+       " np.float64(0.5313910658146311),\n",
+       " np.float64(0.5090670387381733),\n",
+       " np.float64(0.5147399129511132),\n",
+       " np.float64(0.5131865908224594)]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "seeds = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+    "rmses2 = []\n",
     "for s in seeds:\n",
+    "    n = len(df)\n",
+    "    n_val = int(n * 0.2)\n",
+    "    n_test = int(n * 0.2)\n",
+    "    n_train = n - n_val - n_test\n",
+    "    \n",
     "    idx = np.arange(n)\n",
     "    np.random.seed(s)\n",
     "    np.random.shuffle(idx)\n",
+    "    \n",
     "    df_train = df.iloc[idx[:n_train]]\n",
     "    df_val = df.iloc[idx[n_train:n_train+n_val]]\n",
-    "    df_test = df.iloc[idx[n_train+n_val:]]"
+    "\n",
+    "    y_train = np.array(df_train.fuel_efficiency_mpg.values)\n",
+    "    y_val = np.array(df_val.fuel_efficiency_mpg.values)\n",
+    "\n",
+    "    del df_train['fuel_efficiency_mpg']\n",
+    "    del df_val['fuel_efficiency_mpg']\n",
+    "\n",
+    "    df_train = df_train.reset_index(drop=True)\n",
+    "    df_val = df_val.reset_index(drop=True)\n",
+    "\n",
+    "    df_train = df_train.fillna(0).values\n",
+    "    df_val = df_val.fillna(0).values\n",
+    "    \n",
+    "    w0, w = train_linear_regression(df_train, y_train)\n",
+    "    y_pred = w0 + df_val.dot(w)\n",
+    "    rmses2.append(rmse(y_val, y_pred))\n",
+    "rmses2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "0c85fc9c-0b7f-40f2-99b9-d43ee97ffb66",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.006989446426433706)"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sd = np.std(rmses2)\n",
+    "sd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "1f5c5e7a-06be-4c5f-821d-4cd1eaef171a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.007)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(sd, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "c284a4d1-dc6f-4a15-bbee-aa103f9ad661",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "65ab62d1-db6b-42a2-8865-dc713a9db308",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5156132022024005)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = len(df)\n",
+    "n_val = int(n * 0.2)\n",
+    "n_test = int(n * 0.2)\n",
+    "n_train = n - n_val - n_test\n",
+    "\n",
+    "idx = np.arange(n)\n",
+    "np.random.seed(9)\n",
+    "np.random.shuffle(idx)\n",
+    "\n",
+    "df_train_val = df.iloc[idx[:n_train+n_val]]\n",
+    "df_test = df.iloc[idx[n_train+n_val:]]\n",
+    "\n",
+    "y_train_val = np.array(df_train_val.fuel_efficiency_mpg.values)\n",
+    "y_test = np.array(df_test.fuel_efficiency_mpg.values)\n",
+    "\n",
+    "del df_train_val['fuel_efficiency_mpg']\n",
+    "del df_test['fuel_efficiency_mpg']\n",
+    "\n",
+    "df_train_val = df_train_val.reset_index(drop=True)\n",
+    "df_test = df_test.reset_index(drop=True)\n",
+    "\n",
+    "df_train_val = df_train_val.fillna(0).values\n",
+    "df_test = df_test.fillna(0).values\n",
+    "\n",
+    "w0, w = train_linear_regression(df_train_val, y_train_val)\n",
+    "y_pred = w0 + df_test.dot(w)\n",
+    "rmse(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47c56412-2d04-42e7-9719-994149f5a9fc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
