--- a/03-classification/homework.ipynb
+++ b/03-classification/homework.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "72fda760-90c3-4572-826f-32eca9f87955",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "37e95b10-8604-435e-b641-d60133e72ff2",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "18aeb5a6-9c6a-4c04-a312-564dc2ce9881",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "4d3efc31-ff4e-4511-bf87-de7dcdbb058a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4     self_employed         europe                  3        0.62          1  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "036e3890-1435-41ac-83a1-7f4e27283346",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "43afcc97-7205-4419-9b6d-303ce88834f6",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "1d0e43d6-c4be-4473-aff7-856e195dd0b1",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "367dc02f-9ead-4557-a855-d18f5756f6e6",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "b84bee36-9629-4f32-abc9-baaef80dadf7",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "4     self_employed         europe                  3        0.62          1  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "e71d6ba3-665c-429b-8e16-ed5d64f0004d",
    "metadata": {},
    "outputs": [],
@@ -371,8 +371,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a04d4cf4-88d5-4ca8-bece-e0c7919c7677",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "industry     \n",
+       "retail           203\n",
+       "finance          200\n",
+       "other            198\n",
+       "healthcare       187\n",
+       "education        187\n",
+       "technology       179\n",
+       "manufacturing    174\n",
+       "NA               134\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['industry']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a79b8e5a-1147-410d-8a8a-0cc8182c64ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "466da0ba-9e06-4efb-ba88-f36d3e0d45d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lead_score</th>\n",
+       "      <th>interaction_count</th>\n",
+       "      <th>number_of_courses_viewed</th>\n",
+       "      <th>annual_income</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>lead_score</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.009888</td>\n",
+       "      <td>-0.004879</td>\n",
+       "      <td>0.015610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>interaction_count</th>\n",
+       "      <td>0.009888</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.023565</td>\n",
+       "      <td>0.027036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>number_of_courses_viewed</th>\n",
+       "      <td>-0.004879</td>\n",
+       "      <td>-0.023565</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.009770</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>annual_income</th>\n",
+       "      <td>0.015610</td>\n",
+       "      <td>0.027036</td>\n",
+       "      <td>0.009770</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          lead_score  interaction_count  \\\n",
+       "lead_score                  1.000000           0.009888   \n",
+       "interaction_count           0.009888           1.000000   \n",
+       "number_of_courses_viewed   -0.004879          -0.023565   \n",
+       "annual_income               0.015610           0.027036   \n",
+       "\n",
+       "                          number_of_courses_viewed  annual_income  \n",
+       "lead_score                               -0.004879       0.015610  \n",
+       "interaction_count                        -0.023565       0.027036  \n",
+       "number_of_courses_viewed                  1.000000       0.009770  \n",
+       "annual_income                             0.009770       1.000000  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation_matrix = df[['lead_score','interaction_count','number_of_courses_viewed','annual_income']].corr()\n",
+    "correlation_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6784ba2b-83b5-47fa-b3c1-6064982c853b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7863f66f-dbb3-47d8-ac87-6c6aa516314a",
    "metadata": {},
    "outputs": [],
    "source": []
